# decore_Base

./: .gitignore  KOFI.md  README.md  README.rst  README_DE.md  README_DE.rst  README_OLD.md  __init__.py  config.json  decore.py  documentation.md  globals.py  pyproject.toml  readme.md  readme_de_en.md  requirements.txt  setup.cfg  uniform.py
.github/: FUNDING.yml
.github/workflows/: docs.yaml  publish.yml
classes/: __init__.py  decore_base.py  decore_function.py  decore_list.py  decore_model.py  decore_pool.py  decore_prompt.py  decore_return.py  global_prompt.py  uniform_action.py  uniform_app.py  uniform_base.py  uniform_design.py  uniform_dialog.py  uniform_element.py  uniform_function.py  uniform_list.py  uniform_model.py  uniform_object.py  uniform_pool.py  uniform_query.py  uniform_translate.py  uniform_view.py  uniform_widget.py  unifrom_return.py
decore_base/: __init__.py  decore.py  globals.py
decore_base/bases/: __init__.py  bi_account_base.py  dbi_m_base.py  dbi_mayor.py  login_base.py
decore_base/classes/: decore_action.py  decore_actor.py  decore_app.py  decore_base.py  decore_dialog.py  decore_element.py  decore_fields.py  decore_function.py  decore_hook.py  decore_mayor.py  decore_model.py  decore_object.py  decore_pool.py  decore_prepare.py  decore_prompt.py  decore_route.py  decore_template.py  decore_translate.py  decore_view.py  decore_widget.py  globals_keybase.py  model_validator.py  pool_actor.py
decore_base/docs/: social_header.txt
decore_base/models/: bi_account_model.py
decore_base/prepare/bases/: __init__.py  welcome_base.py
decore_base/prepare/models/: welcome_model.py
decore_base/prepare/pwa/static/: manifest.json  service-worker.js
decore_base/prepare/pwa/static/css/: 782.a28b87fc.css  app.2d4bf99d.css  vendor.645654ef.css
decore_base/prepare/pwa/static/js/: 33.669626ed.js  33.fdc392ff.js  782.7d497546.js  app.002ff34a.js  app.693b530e.js  vendor.67deae63.js  vendor.a6f37dcd.js
decore_base/prepare/pwa/templates/: index.html
decore_base/prepare/spa/static/css/: 17.f668b58c.css  425.395a1f00.css  495.894b0670.css  556.46727f52.css  578.f298c8b0.css  586.73b198fd.css  746.07b0f493.css  746.1b627f79.css  746.3fcd2463.css  746.a7cf1cf5.css  746.e9308eb6.css  app.16e62d6e.css  app.2f206dcc.css  app.44c92900.css  app.50021313.css  app.a8b76aa4.css  vendor.14c9ac7a.css
decore_base/prepare/spa/static/js/: 17.5498881e.js  425.5151d83b.js  495.9d59bccf.js  495.d208cc48.js  531.78b72b63.js  556.dcd00521.js  578.3f04d830.js  578.d1c6fcb5.js  586.cd6deba1.js  65.940d9b80.js  686.0de16786.js  746.120a723a.js  746.3530a26a.js  746.4e1cfb6a.js  746.6a5a50ce.js  746.6ac15053.js  746.7128d83e.js  746.765bb138.js  746.78228d54.js  746.7c096b95.js  746.8bb2656d.js  746.a858b376.js  746.b0eaec85.js  746.e87ac2e5.js  746.fb492e0b.js  782.fd8e4fed.js  912.f638ed14.js  969.b1f0f0b0.js  99.0a420f2e.js  app.15e1a2b2.js  app.1611e875.js  app.224aa1ee.js  app.24a6c2a1.js  (+34 more)
decore_base/prepare/spa/templates/: index.html
decore_base/sample/: app.py  language.json
decore_base/sample/bases/: __init__.py  account_base.py  company_base.py  global_management_base.py  information_stytem_base.py  person_base.py  test_base.py
decore_base/sample/models/: account_model.py  company_model.py  person_model.py  test_model.py
decore_base/sample/spa/templates/: index.html
decore_base/sample/state/: database.db  keybase.kdbx  querybase.db
decore_base/uniform/: __init__.py  conform_model.py  perform_model.py
decore_base/uniform/depricated/: askform_base.py  buyform_base.py
decore_test/: config.json  language.json  test_fields.py  test_library.py  test_model.py  test_module.py
decore_test/state/: actorbase.db  database.db  keybase.kdbx  querybase.db
docs/: CNAME  conf.py  config.json  decore.rst  fields.rst  index.html  index.rst  make.bat  model.rst
docs/_build/doctrees/: decore.doctree  environment.pickle  index.doctree  model.doctree  sample.doctree
docs/_build/html/: .buildinfo  decore.html  genindex.html  index.html  model.html  objects.inv  py-modindex.html  sample.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  sample.rst.txt
docs/page/doctrees/: environment.pickle  fields.doctree  index.doctree
docs/page/html/: .buildinfo  decore.html  fields.html  genindex.html  index.html  model.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/page/html/_sources/: index.rst.txt
docs/page/html/_static/: documentation_options.js
docs/state/: keybase.kdbx
extensions/: conform_model.py  perform_model.py  reform_client_model.py  reform_server_model.py
extensions/depricated/: askform_base.py  buyform_base.py  conform_base.py  deform_base.py
page/: index.html  search.html  searchindex.js
page/_sources/: index.rst.txt
prepare/: app.prep
prepare/spa/static/js/: 912.143d216d.js
prepare/spa/templates/: index.html
sample/: app.py  config.json
sample/bases/: company_base.py  global_management_base.py  person_base.py
sample/models/: company_model.py  person_model.py
sample/spa/static/js/: app.329a4a89.js
sample/spa/templates/: index.html
sample/state/: database.db  keybase.kdbx  querybase.db
spa/static/css/: app.863f454c.css
spa/static/js/: 65.361f63bc.js  912.143d216d.js  app.8c8758ab.js  vendor.03c46c80.js
spa/templates/: index.html
src/: readme_de_en.md
src/classes/: decore_app.py  decore_model.py  decore_pool.py  decore_query.py  decore_view.py
src/extensions/: reform_server_model.py
src/sample/: app.py
src/sample/bases/: __init__.py  account_base.py
src/sample/models/: account_model.py
src/sample/state/: database.db
state/: database.db  keybase.kdbx
(+15 files in other folders)
