[metadata]
name = decore_Base
description = decore Base is a "Python to Vue.js" open source package that helps you go from idea to view in a few simple steps. It is targeted to those who want to focus on the results of their algorithms, do scientific work, perform promotional teaching or learning functions.
long_description = source code and documentation at https://github.com/KemoPanzah/decore_Base#readme
url = https://ko-fi.com/decore_Base
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
python_requires = >=3.9