[metadata]
author = Kemo Panzah
name = decore_Base
description = decore Base is a "Python to Vue.js" open source package that helps you go from idea to view in a few simple steps. It is targeted to those who want to focus on the results of their algorithms, do scientific work, perform promotional teaching or learning functions.
long_description = source code and documentation at https://github.com/KemoPanzah/decore_Base#readme
url = https://ko-fi.com/decore_Base/posts
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows

[options]
packages = find:
python_requires = >=3.9
install_requires = 
    argon2-cffi==21.3.0
    argon2-cffi-bindings==21.2.0
    blinker==1.6.2
    Cerberus==1.3.4
    certifi==2023.5.7
    cffi==1.15.1
    charset-normalizer==3.1.0
    click==8.1.3
    colorama==0.4.6
    construct==2.10.68
    coverage==7.2.5
    dirsync==2.2.5
    exceptiongroup==1.1.1
    Flask==2.3.2
    Flask-Cors==3.0.10
    Flask-WTF==1.1.1
    future==0.18.3
    idna==3.4
    importlib-metadata==6.6.0
    iniconfig==2.0.0
    itsdangerous==2.1.2
    Jinja2==3.1.2
    libretranslatepy==2.1.1
    lxml==4.9.2
    MarkupSafe==2.1.2
    mimesis==9.0.0
    packaging==23.1
    peewee==3.16.2
    pluggy==1.0.0
    pycparser==2.21
    pycryptodomex==3.17
    pykeepass==4.0.3
    pytest==7.3.1
    pytest-cov==4.0.0
    python-dateutil==2.8.2
    requests==2.30.0
    six==1.16.0
    str2type==0.4.1
    tomli==2.0.1
    translate==3.6.1
    urllib3==2.0.2
    waitress==2.1.2
    Werkzeug==2.3.4
    WTForms==3.0.1
    zipp==3.15.0
