[metadata]
author = Kemo Panzah
name = decore-Base
description = decore Base is an out-of-the-box "Python to Vue.js" data application dashboard that helps you go from idea to view in a few simple steps. It is aimed at those who want to focus on the results of their algorithms , do scientific work, or perform teaching or learning functions.
long_description = file: README.rst,
url = https://www.decore.dev
project_urls =
    Funding = https://ko-fi.com/decore_Base
    Source = https://github.com/KemoPanzah/decore_Base

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows

[options]
packages = find:
include_package_data = true
python_requires = >=3.9
install_requires = 
    altgraph==0.17.3
    argon2-cffi-bindings==21.2.0
    argon2-cffi==21.3.0
    bcrypt==4.2.1
    blinker==1.6.2
    Cerberus==1.3.4
    certifi==2023.5.7
    cffi==1.15.1
    charset-normalizer==3.1.0
    click==8.1.3
    colorama==0.4.6
    construct==2.10.68
    dirsync==2.2.5
    Flask-Cors==4.0.0
    Flask-JWT-Extended==4.7.1
    Flask-WTF==1.1.1
    Flask==2.3.2
    future==0.18.3
    idna==3.4
    iniconfig==2.0.0
    itsdangerous==2.1.2
    Jinja2==3.1.2
    libretranslatepy==2.1.1
    lxml==4.9.3
    MarkupSafe==2.1.3
    mimesis==10.1.0
    packaging==23.1
    peewee==3.16.2
    pefile==2023.2.7
    pluggy==1.2.0
    pycparser==2.21
    pycryptodomex==3.18.0
    pyinstaller-hooks-contrib==2023.5
    pyinstaller==5.13.0
    pykeepass==4.0.5
    pytest==7.4.0
    python-dateutil==2.8.2
    pywin32-ctypes==0.2.2
    requests==2.31.0
    six==1.16.0
    str2type==0.4.1
    translate==3.6.1
    urllib3==2.0.3
    waitress==2.1.2
    Werkzeug==2.3.6
    WTForms==3.0.1